完成图床配置后端功能
