# routers/api_router.go
@@ -100,6 +100,7 @@ func (a *ApiRouter) InitApiRouter(rootPath string, router *gin.Engine) {
 		sysSettingApiRouter.POST("/sys_setting/site", sysSettingHandler.SaveSiteSetting)
 		sysSettingApiRouter.POST("/sys_setting/smtp", sysSettingHandler.SaveSMTPSetting)
 		sysSettingApiRouter.POST("/sys_setting/pic_bed/smms", sysSettingHandler.SaveSmmsSetting)
+		sysSettingApiRouter.POST("/sys_setting/pic_bed/tencent_cos", sysSettingHandler.SaveTencentCosSetting)
 		sysSettingApiRouter.POST("/sys_setting/email/test", sysSettingHandler.SendTestEmail)
 		sysSettingApiRouter.GET("/sys_setting/index_info", sysSettingHandler.GetAdminIndexData)
 	}
